--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@tailwindcss/typography": "^0.2.0",
 		"autoprefixer": "^9.8.5",
 		"postcss-cli": "^7.1.1",
+		"postcss-import": "^12.0.1",
 		"tailwindcss": "^1.5.1"
 	},
 	"devDependencies": {
