--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### DNN_Tailwind ###
 node_modules/
 build/
 dist/
@@ -5,3 +6,10 @@ src/scss/tailwind
 yarn-error.log
 prettierrc
 manifest.dnn
+
+### jekyll ###
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+Gemfile.lock
