--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,8 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
+url: "https://skrantzman.github.io/DNN_Tailwind/" # the base hostname & protocol for your site, e.g. http://example.com
 repository: https://github.com/skrantzman/DNN_Tailwind
 github_username: skrantzman
 timezone: America/Los_Angles
