--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,15 @@
+name: DNN_Tailwind - Tailwind CSS theme development environment for DNN sites.
+
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://skrantzman.github.io/DNN_Tailwind/" # the base hostname & protocol for your site, e.g. http://example.com
+repository: https://github.com/skrantzman/DNN_Tailwind
+github_username: skrantzman
+logo: "/img/Dnn_Tailwind.png"
+
 # Build settings
 theme: jekyll-theme-cayman
 plugins:
