--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
 	"name": "dnn_tailwind",
-	"version": "1.1.1",
-	"description": "DNN Tailwind Base Theme",
+	"version": "1.2.0",
+	"description": "DNN Tailwind Base Theme tlw2.0.3",
 	"main": "gulpfile.js",
 	"author": "Steve Krantzman",
 	"license": "GPL-3.0",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.15.2",
-		"@tailwindcss/typography": "^0.3.1",
-		"tailwindcss": "^1.9.6"
+		"@tailwindcss/typography": "^0.4.0",
+		"tailwindcss": "^2.0.3"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.2.4",
 		"browser-sync": "^2.26.13",
 		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "^7.0.1",
 		"gulp-clean": "^0.4.0",
 		"gulp-clean-css": "^4.0.0",
 		"gulp-imagemin": "^5.0.3",
 		"gulp-jshint": "2.x",
 		"gulp-notify": "^3.0.0",
-		"gulp-postcss": "^8.0.0",
+		"gulp-postcss": "^9.0.0",
 		"gulp-rename": "^1.2.2",
 		"gulp-replace": "^1.0.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-uglify": "^3.0.0",
 		"gulp-zip": "^4.1.0",
 		"jshint": "^2.9.5",
+		"postcss": "^8.2.6",
 		"postcss-import": "^12.0.1",
 		"postcss-nested": "^4.2.3",
 		"postcss-simple-vars": "^5.0.2"
