--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -15,6 +15,8 @@ menu:
         url: /Change-Color-Scheme.html
       - page: Purging Tailwind Classes
         url: /Purging-Tailwind-Classes
+      - page: Add-Font-Awesome-Pro-Icons
+        url: /Add-Font-Awesome-Pro-Icons.html
       - page: Work With The Out-Of-Box Theme
         url: /Work-With-Out-Of-Box-Theme.html
       - page: Add Release Notes To Your Custom Theme
